Separate config parameters for checks, training_args and evaluation_args

--- a/examples/orientation_classification/oodles_run_model.ipynb
+++ b/examples/orientation_classification/oodles_run_model.ipynb
@@ -80,16 +80,29 @@
    ],
    "source": [
     "cfg = {\n",
-    "    \"fold_name\": data_save_fold_name,  # Folder to save logged data\n",
-    "    \"orig_training_file\": orig_training_file,  # Path to training file of the initial model\n",
-    "    \"signal_formulae\": my_signal,  # Define your signal to identify edge cases\n",
-    "    \"data_transformation_func\": input_to_dataset_transformation,  # Connect data collection pipeline\n",
-    "    # Connect data annotation pipeline\n",
-    "    \"annotation_method\": {\"method\": AnnotationMethod.MASTER_FILE, \"args\": annotation_args}, \n",
-    "    \"golden_testing_dataset\": golden_testing_file, # Define comparison dataset\n",
-    "    \"training_func\": train_model,  # Connect training pipeline\n",
-    "    \"inference_func\": get_accuracy  # Connect inference pipeline\n",
+    "    # Define your signal to identify edge cases\n",
+    "    \"checks\": [{\n",
+    "        'type': 'Edge cases', \n",
+    "        \"signal_formulae\": (Signal(\"Pushup\", pushup_signal) | Signal(ModelSignal.BINARY_ENTROPY_CONFIDENCE, \n",
+    "                is_model_signal=True, extra_args={'conf_threshold': 0.8}))}],\n",
+    "\n",
+    "    # Connect training pipeline to annotate data and retrain the model\n",
+    "    \"training_args\": {\n",
+    "        \"data_transformation_func\": input_to_dataset_transformation,  \n",
+    "        \"annotation_method\": {\"method\": AnnotationMethod.MASTER_FILE, \"args\": annotation_args}, \n",
+    "        \"training_func\": train_model, \n",
+    "        \"fold_name\": data_save_fold_name,  \n",
+    "        \"orig_training_file\": orig_training_file,  \n",
+    "    },\n",
+    "\n",
+    "    # Connect evaluation pipeline to test retrained model against original model\n",
+    "    \"evaluation_args\": {\n",
+    "        \"inference_func\": get_accuracy,\n",
+    "        \"golden_testing_dataset\": golden_testing_file,\n",
+    "        \"metrics_to_check\": ['accuracy']\n",
+    "    }\n",
     "}\n",
+    "\n",
     "framework = Framework(cfg)\n",
     "\n",
     "@monitor(framework)\n",
