--- a/examples/orientation_classification/oodles_run_model.ipynb
+++ b/examples/orientation_classification/oodles_run_model.ipynb
@@ -15,7 +15,7 @@
     "from oodles import Framework\n",
     "from oodles import Signal\n",
     "from oodles import monitor\n",
-    "from oodles import ModelSignal, AnnotationMethod\n",
+    "from oodles import ModelSignal, AnnotationMethod, Anomaly\n",
     "\n",
     "from dataset import input_to_dataset_transformation, read_json, write_json\n",
     "from model import run_real_world_inference, get_accuracy\n",
@@ -82,7 +82,7 @@
     "cfg = {\n",
     "    # Define your signal to identify edge cases\n",
     "    \"checks\": [{\n",
-    "        'type': 'Edge cases', \n",
+    "        'type': Anomaly.EDGE_CASE, \n",
     "        \"signal_formulae\": (Signal(\"Pushup\", pushup_signal) | Signal(ModelSignal.BINARY_ENTROPY_CONFIDENCE, \n",
     "                is_model_signal=True, extra_args={'conf_threshold': 0.8}))}],\n",
     "\n",
@@ -128,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-11 22:47:51.618174: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "2022-11-12 00:06:43.875474: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -137,25 +137,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "3/3 [==============================] - 1s 167ms/step - loss: 144.1491 - binary_accuracy: 0.2969\n",
+      "3/3 [==============================] - 1s 160ms/step - loss: 144.1491 - binary_accuracy: 0.2969\n",
       "Epoch 2/10\n",
-      "3/3 [==============================] - 1s 168ms/step - loss: 133.6838 - binary_accuracy: 0.2656\n",
+      "3/3 [==============================] - 0s 163ms/step - loss: 132.3618 - binary_accuracy: 0.2734\n",
       "Epoch 3/10\n",
-      "3/3 [==============================] - 0s 165ms/step - loss: 116.0375 - binary_accuracy: 0.2956\n",
+      "3/3 [==============================] - 1s 194ms/step - loss: 120.7517 - binary_accuracy: 0.3047\n",
       "Epoch 4/10\n",
-      "3/3 [==============================] - 0s 155ms/step - loss: 115.3663 - binary_accuracy: 0.2760\n",
+      "3/3 [==============================] - 0s 161ms/step - loss: 115.5801 - binary_accuracy: 0.2904\n",
       "Epoch 5/10\n",
-      "3/3 [==============================] - 0s 157ms/step - loss: 99.6800 - binary_accuracy: 0.3255\n",
+      "3/3 [==============================] - 0s 154ms/step - loss: 101.2244 - binary_accuracy: 0.3177\n",
       "Epoch 6/10\n",
-      "3/3 [==============================] - 0s 147ms/step - loss: 91.0955 - binary_accuracy: 0.3281\n",
+      "3/3 [==============================] - 0s 161ms/step - loss: 92.0054 - binary_accuracy: 0.3021\n",
       "Epoch 7/10\n",
-      "3/3 [==============================] - 0s 159ms/step - loss: 92.8531 - binary_accuracy: 0.2969\n",
+      "3/3 [==============================] - 0s 160ms/step - loss: 87.5556 - binary_accuracy: 0.3242\n",
       "Epoch 8/10\n",
-      "3/3 [==============================] - 0s 146ms/step - loss: 81.6953 - binary_accuracy: 0.3333\n",
+      "3/3 [==============================] - 0s 150ms/step - loss: 80.8414 - binary_accuracy: 0.3320\n",
       "Epoch 9/10\n",
-      "3/3 [==============================] - 0s 145ms/step - loss: 78.1088 - binary_accuracy: 0.3372\n",
+      "3/3 [==============================] - 0s 163ms/step - loss: 73.7936 - binary_accuracy: 0.3685\n",
       "Epoch 10/10\n",
-      "3/3 [==============================] - 1s 149ms/step - loss: 70.5959 - binary_accuracy: 0.3620\n",
+      "3/3 [==============================] - 1s 165ms/step - loss: 69.5730 - binary_accuracy: 0.3724\n",
       "INFO:tensorflow:Assets written to: trained_models/initial_model/assets\n",
       "Model saved at:  trained_models/initial_model\n"
      ]
@@ -176,51 +176,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50  edge-cases collected out of  188  inferred samples\n",
-      "100  edge-cases collected out of  375  inferred samples\n",
-      "150  edge-cases collected out of  581  inferred samples\n",
-      "200  edge-cases collected out of  792  inferred samples\n",
-      "250  edge-cases collected out of  957  inferred samples\n",
+      "50  edge-cases collected out of  179  inferred samples\n",
+      "100  edge-cases collected out of  392  inferred samples\n",
+      "150  edge-cases collected out of  593  inferred samples\n",
+      "200  edge-cases collected out of  805  inferred samples\n",
+      "250  edge-cases collected out of  958  inferred samples\n",
       "Kicking off re-training\n",
-      "251 data-points selected out of 958\n",
+      "251 data-points selected out of 960\n",
       "Training on:  oodles_smart_data/1/training_dataset.json  which has  2255  data-points\n",
       "Epoch 1/10\n",
-      "8/8 [==============================] - 2s 164ms/step - loss: 26.6923 - binary_accuracy: 0.7202\n",
+      "8/8 [==============================] - 1s 163ms/step - loss: 27.2824 - binary_accuracy: 0.7134\n",
       "Epoch 2/10\n",
-      "8/8 [==============================] - 1s 171ms/step - loss: 15.9058 - binary_accuracy: 0.6313\n",
+      "8/8 [==============================] - 1s 163ms/step - loss: 16.5457 - binary_accuracy: 0.6152\n",
       "Epoch 3/10\n",
-      "8/8 [==============================] - 1s 163ms/step - loss: 12.4661 - binary_accuracy: 0.6030\n",
+      "8/8 [==============================] - 1s 160ms/step - loss: 13.0344 - binary_accuracy: 0.5811\n",
       "Epoch 4/10\n",
-      "8/8 [==============================] - 1s 162ms/step - loss: 10.5119 - binary_accuracy: 0.6865\n",
+      "8/8 [==============================] - 1s 164ms/step - loss: 10.0725 - binary_accuracy: 0.6934\n",
       "Epoch 5/10\n",
-      "8/8 [==============================] - 1s 163ms/step - loss: 7.6801 - binary_accuracy: 0.7241\n",
+      "8/8 [==============================] - 1s 161ms/step - loss: 7.0817 - binary_accuracy: 0.7354\n",
       "Epoch 6/10\n",
-      "8/8 [==============================] - 1s 163ms/step - loss: 5.2205 - binary_accuracy: 0.7568\n",
+      "8/8 [==============================] - 1s 162ms/step - loss: 5.0491 - binary_accuracy: 0.7471\n",
       "Epoch 7/10\n",
-      "8/8 [==============================] - 1s 165ms/step - loss: 4.1259 - binary_accuracy: 0.7900\n",
+      "8/8 [==============================] - 1s 162ms/step - loss: 3.8365 - binary_accuracy: 0.7783\n",
       "Epoch 8/10\n",
-      "8/8 [==============================] - 1s 163ms/step - loss: 3.2115 - binary_accuracy: 0.8149\n",
+      "8/8 [==============================] - 1s 162ms/step - loss: 3.0959 - binary_accuracy: 0.8174\n",
       "Epoch 9/10\n",
-      "8/8 [==============================] - 1s 162ms/step - loss: 2.5050 - binary_accuracy: 0.8379\n",
+      "8/8 [==============================] - 1s 161ms/step - loss: 2.5521 - binary_accuracy: 0.8545\n",
       "Epoch 10/10\n",
-      "8/8 [==============================] - 1s 157ms/step - loss: 2.5621 - binary_accuracy: 0.8477\n",
+      "8/8 [==============================] - 1s 161ms/step - loss: 2.5093 - binary_accuracy: 0.8433\n",
       "INFO:tensorflow:Assets written to: trained_models/version_1/assets\n",
       "Model saved at:  trained_models/version_1\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
+      "Training on:  data/training_data.json  which has  1000  data-points\n",
+      "Epoch 1/10\n",
+      "3/3 [==============================] - 1s 159ms/step - loss: 135.5212 - binary_accuracy: 0.3177\n",
+      "Epoch 2/10\n",
+      "3/3 [==============================] - 0s 162ms/step - loss: 116.8246 - binary_accuracy: 0.3164\n",
+      "Epoch 3/10\n",
+      "3/3 [==============================] - 0s 160ms/step - loss: 93.8127 - binary_accuracy: 0.3424\n",
+      "Epoch 4/10\n",
+      "3/3 [==============================] - 0s 161ms/step - loss: 75.0639 - binary_accuracy: 0.3451\n",
+      "Epoch 5/10\n",
+      "3/3 [==============================] - 0s 161ms/step - loss: 59.4237 - binary_accuracy: 0.3932\n",
+      "Epoch 6/10\n",
+      "3/3 [==============================] - 0s 160ms/step - loss: 47.4853 - binary_accuracy: 0.4674\n",
+      "Epoch 7/10\n",
+      "3/3 [==============================] - 0s 159ms/step - loss: 41.7022 - binary_accuracy: 0.5729\n",
+      "Epoch 8/10\n",
+      "3/3 [==============================] - 0s 155ms/step - loss: 38.5116 - binary_accuracy: 0.6823\n",
+      "Epoch 9/10\n",
+      "3/3 [==============================] - 0s 160ms/step - loss: 34.0103 - binary_accuracy: 0.7383\n",
+      "Epoch 10/10\n",
+      "3/3 [==============================] - 0s 156ms/step - loss: 38.3004 - binary_accuracy: 0.7865\n",
+      "INFO:tensorflow:Assets written to: trained_models/version_0/assets\n",
+      "Model saved at:  trained_models/version_0\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 348us/step\n",
+      "492/492 [==============================] - 0s 353us/step\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 346us/step\n",
+      "492/492 [==============================] - 0s 351us/step\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.24499396096878776\n",
-      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.7932108575424321\n",
+      "Old model accuracy:  0.7340283516623228\n",
+      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.7878075138262031\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "50  edge-cases collected out of  1169  inferred samples\n",
-      "100  edge-cases collected out of  1345  inferred samples\n",
-      "150  edge-cases collected out of  1487  inferred samples\n"
+      "50  edge-cases collected out of  1152  inferred samples\n",
+      "100  edge-cases collected out of  1330  inferred samples\n",
+      "150  edge-cases collected out of  1474  inferred samples\n"
      ]
     }
    ],
