Adding a custom monitor to cyber attack classification example

--- a/examples/cyber_attack_classification/drift_detection.ipynb
+++ b/examples/cyber_attack_classification/drift_detection.ipynb
@@ -84,7 +84,7 @@
     "classifier.fit(X_train, y_train)\n",
     "y_pred = classifier.predict(X_test)\n",
     "print(classification_report(y_test,y_pred))\n",
-    "print(\"Accuracy: \"+ str(accuracy_score(y_test, y_pred)))\n",
+    "print(\"Accuracy: \" + str(accuracy_score(y_test, y_pred)))\n",
     "\n",
     "# Plot the confusion matrix\n",
     "cm=confusion_matrix(y_test,y_pred)\n",
@@ -97,6 +97,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db5c7b1d-a489-48be-9886-84421053a3fa",
+   "metadata": {},
+   "source": [
+    "#### Define a Custom Drift Monitor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1322464e-0917-4f68-aa4c-214a9b6fa7c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_concept_drift(inputs, outputs):\n",
+    "    \"\"\"\n",
+    "    Defining a custom drift metric where\n",
+    "    the user just want to check if accuracy \n",
+    "    drops beyond a threshold.\n",
+    "    \"\"\"\n",
+    "    if \"y_test\" in inputs.keys():\n",
+    "        y_gt = inputs[\"y_test\"]\n",
+    "        y_pred = outputs\n",
+    "        window_size = inputs.get('window_size', 200)\n",
+    "        thres = inputs.get('thres', 0.02)\n",
+    "\n",
+    "        acc_arr = np.cumsum(y_pred==y_test)/np.arange(1,len(y_pred)+1)\n",
+    "        \n",
+    "        initial_acc = sum(acc_arr[0:window_size])/window_size\n",
+    "        \n",
+    "        for i in range(window_size, len(acc_arr)):\n",
+    "            recent_acc = sum(acc_arr[i: i+window_size])/window_size\n",
+    "            if initial_acc - recent_acc > thres:\n",
+    "                print(\"Concept drift detected with custom metric at time: \", i)\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4c38076d-babb-46f8-b853-fb9796faae4a",
    "metadata": {},
    "source": [
@@ -105,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1adaa6a1-9e00-4365-a886-7f1785f04f2d",
    "metadata": {},
    "outputs": [
@@ -120,12 +158,20 @@
    "source": [
     "cfg = {\n",
     "    # Define your metrics to identify data drifts\n",
-    "    \"checks\": [{\n",
+    "    \"checks\": [\n",
+    "        {\n",
     "        'type': Anomaly.DATA_DRIFT,\n",
     "        'algorithm': DataDrift.DDM,\n",
     "        'warn_thres': 2,\n",
     "        'alarm_thres': 3,\n",
-    "    }], \n",
+    "        },\n",
+    "        {\n",
+    "        'type': Anomaly.CUSTOM_MONITOR,\n",
+    "        'algorithm': check_concept_drift,\n",
+    "        'thres': 0.01,\n",
+    "        'window_size': 100,\n",
+    "        },\n",
+    "    ], \n",
     "    # Attach the training arguments\n",
     "    \"training_args\": {\n",
     "        \"fold_name\": 'oodles_smart_data', \n",
@@ -149,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "ec793e01-fe2a-4ee0-b258-968936853950",
    "metadata": {},
    "outputs": [
@@ -157,7 +203,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data drift detected at time:  111298\n"
+      "Data drift detected with DDM at time:  111298\n",
+      "Concept drift detected with custom metric at time:  121835\n"
      ]
     }
    ],
@@ -176,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "444ec815-f7d5-4946-bfbc-7286a2ed76cb",
    "metadata": {},
    "outputs": [
