Add mechanism to attach GT - part 2

--- a/examples/edge_cases/orientation_classification/oodles_run_model.ipynb
+++ b/examples/edge_cases/orientation_classification/oodles_run_model.ipynb
@@ -22,7 +22,7 @@
     "from oodles import Framework\n",
     "from oodles import Signal\n",
     "from oodles import monitor\n",
-    "from oodles import ModelSignal, AnnotationMethod, Anomaly\n",
+    "from oodles import ModelSignal, AnnotationMethod, Anomaly, DataDriftAlgo\n",
     "\n",
     "from dataset import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
     "from pushup_signal import pushup_signal\n",
@@ -159,7 +159,16 @@
     "    \"checks\": [{\n",
     "        'type': Anomaly.EDGE_CASE, \n",
     "        \"signal_formulae\": pushup_edge_case\n",
+    "    },\n",
+    "    {\n",
+    "        'type': Anomaly.DATA_DRIFT,\n",
+    "        'algorithm': DataDriftAlgo.DDM  \n",
+    "    },\n",
+    "    {\n",
+    "        'type': Anomaly.CONCEPT_DRIFT,\n",
+    "        'algorithm': DataDriftAlgo.DDM  \n",
     "    }],\n",
+    "    \"data_identifier\": \"id\",\n",
     "\n",
     "    # Connect training pipeline to annotate data and retrain the model\n",
     "    \"training_args\": {\n",
@@ -233,9 +242,15 @@
     "pred_classes = []\n",
     "model = joblib.load(\"trained_models_lr/\" + 'version_0')\n",
     "for i,elem in enumerate(X_test):\n",
-    "    preds = model_predict({\"model\": model, \"kps\": elem.reshape(1, -1), \"id\": [id[i]]})\n",
+    "\n",
+    "    # Do model prediction\n",
+    "    preds, idens = model_predict({\"model\": model, \"kps\": elem.reshape(1, -1), \"id\": [id[i]]})\n",
+    "\n",
+    "    # Attach Ground Truth\n",
+    "    framework_lr.attach_ground_truth({'id': idens, 'gt': [y_test[i]]})\n",
+    "\n",
+    "    # Retrain only once\n",
     "    if framework_lr.version > 1:\n",
-    "        # Retrain only once\n",
     "        break"
    ]
   },
@@ -450,10 +465,20 @@
     "    real_world_test_cases, batch_size=1, shuffle=False, augmentations=False, is_test=True\n",
     ")\n",
     "model = tf.keras.models.load_model(model_dir + model_save_name)\n",
+    "gt_data = read_json(annotation_args['master_file'])\n",
+    "all_gt_ids = [x['id'] for x in gt_data]\n",
+    "\n",
     "for i,elem in enumerate(real_world_dataset):\n",
-    "    preds = model_predict({\"model\": model, \"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]})\n",
+    "\n",
+    "    # Do model prediction\n",
+    "    preds, idens = model_predict({\"model\": model, \"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]})\n",
+    "\n",
+    "    # Attach ground truth\n",
+    "    this_elem_gt = gt_data[all_gt_ids.index(elem[0]['id'][0])]['gt']\n",
+    "    framework_dnn.attach_ground_truth({'id': idens, 'gt': np.array([this_elem_gt])})\n",
+    "\n",
+    "    # Retrain only once\n",
     "    if framework_dnn.version > 1:\n",
-    "        # Retrain only once\n",
     "        break"
    ]
   }
