Add support for batch inference

--- a/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
+++ b/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
@@ -156,6 +156,7 @@
     }
    ],
    "source": [
+    "inference_batch_size = 256\n",
     "cfg = {\n",
     "    # Define your metrics to identify data drifts\n",
     "    \"checks\": [\n",
@@ -172,6 +173,7 @@
     "        'window_size': 100,\n",
     "        },\n",
     "    ], \n",
+    "    \"batch_size\": inference_batch_size,\n",
     "    # Attach the training arguments\n",
     "    \"training_args\": {\n",
     "        \"fold_name\": 'oodles_smart_data', \n",
@@ -212,12 +214,10 @@
     }
    ],
    "source": [
-    "inputs = {'model': classifier}\n",
-    "\n",
-    "for i, elem in enumerate(X_test):\n",
-    "    inputs.update({'X_test': [X_test[i]]})\n",
+    "for i in range(int(len(X_test)/inference_batch_size)):\n",
+    "    inputs = {'model': classifier, 'X_test': X_test[i*inference_batch_size:(i+1)*inference_batch_size]}\n",
     "    y_pred, idens = model_predict(inputs)\n",
-    "    framework.attach_ground_truth({'identifier': idens, 'gt': [y_test[i]]})"
+    "    framework.attach_ground_truth({'identifier': idens, 'gt': y_test[i*inference_batch_size:(i+1)*inference_batch_size]})"
    ]
   },
   {
