--- a/examples/edge_cases/orientation_classification/oodles_run_model.ipynb
+++ b/examples/edge_cases/orientation_classification/oodles_run_model.ipynb
@@ -78,7 +78,8 @@
     "annotation_args = {'master_file': 'data/master_annotation_data.json'}\n",
     "\n",
     "# Defining the egde-case signal\n",
-    "pushup_edge_case = Signal(\"Pushup\", pushup_signal)"
+    "pushup_edge_case = Signal(\"Pushup\", pushup_signal)\n",
+    "inference_batch_size = 1"
    ]
   },
   {
@@ -169,6 +170,7 @@
     "        'algorithm': DataDriftAlgo.DDM  \n",
     "    }],\n",
     "    \"data_identifier\": \"id\",\n",
+    "    \"batch_size\": inference_batch_size,\n",
     "\n",
     "    # Connect training pipeline to annotate data and retrain the model\n",
     "    \"training_args\": {\n",
@@ -462,7 +464,7 @@
     "model_dir = 'trained_models_dnn/'\n",
     "model_save_name = 'version_0'\n",
     "real_world_dataset = KpsDataset(\n",
-    "    real_world_test_cases, batch_size=1, shuffle=False, augmentations=False, is_test=True\n",
+    "    real_world_test_cases, batch_size=inference_batch_size, shuffle=False, augmentations=False, is_test=True\n",
     ")\n",
     "model = tf.keras.models.load_model(model_dir + model_save_name)\n",
     "gt_data = read_json(annotation_args['master_file'])\n",
@@ -474,8 +476,8 @@
     "    preds, idens = model_predict({\"model\": model, \"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]})\n",
     "\n",
     "    # Attach ground truth\n",
-    "    this_elem_gt = gt_data[all_gt_ids.index(elem[0]['id'][0])]['gt']\n",
-    "    framework_dnn.attach_ground_truth({'id': idens, 'gt': np.array([this_elem_gt])})\n",
+    "    this_elem_gt = [gt_data[all_gt_ids.index(x)]['gt'] for x in elem[0]['id']]\n",
+    "    framework_dnn.attach_ground_truth({'id': idens, 'gt': np.array(this_elem_gt)})\n",
     "\n",
     "    # Retrain only once\n",
     "    if framework_dnn.version > 1:\n",
