Add mechanism to attach GT (#8)
* Add mechanism to attach GT - part 1

* Add mechanism to attach GT - part 2

* Fixing minor bugs

* Add support for batch inference

* Making custom anamoly work in drift example and ran black

Co-authored-by: vipgupta <vipgupta84@gmail.com>

--- a/examples/edge_cases/orientation_classification/oodles_run_model.ipynb
+++ b/examples/edge_cases/orientation_classification/oodles_run_model.ipynb
@@ -22,7 +22,7 @@
     "from oodles import Framework\n",
     "from oodles import Signal\n",
     "from oodles import monitor\n",
-    "from oodles import ModelSignal, AnnotationMethod, Anomaly\n",
+    "from oodles import ModelSignal, AnnotationMethod, Anomaly, DataDriftAlgo\n",
     "\n",
     "from dataset import input_to_dataset_transformation, read_json, write_json, KpsDataset\n",
     "from pushup_signal import pushup_signal\n",
@@ -78,7 +78,8 @@
     "annotation_args = {'master_file': 'data/master_annotation_data.json'}\n",
     "\n",
     "# Defining the egde-case signal\n",
-    "pushup_edge_case = Signal(\"Pushup\", pushup_signal)"
+    "pushup_edge_case = Signal(\"Pushup\", pushup_signal)\n",
+    "inference_batch_size = 1"
    ]
   },
   {
@@ -98,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "Training on:  data/training_data.json  which has  1000  data-points\n",
-      "Model saved at:  trained_models_lr/version_0\n"
+      "Trained model exists. Skipping training again.\n"
      ]
     }
    ],
@@ -159,7 +160,17 @@
     "    \"checks\": [{\n",
     "        'type': Anomaly.EDGE_CASE, \n",
     "        \"signal_formulae\": pushup_edge_case\n",
+    "    },\n",
+    "    {\n",
+    "        'type': Anomaly.DATA_DRIFT,\n",
+    "        'algorithm': DataDriftAlgo.DDM  \n",
+    "    },\n",
+    "    {\n",
+    "        'type': Anomaly.CONCEPT_DRIFT,\n",
+    "        'algorithm': DataDriftAlgo.DDM  \n",
     "    }],\n",
+    "    \"data_identifier\": \"id\",\n",
+    "    \"batch_size\": inference_batch_size,\n",
     "\n",
     "    # Connect training pipeline to annotate data and retrain the model\n",
     "    \"training_args\": {\n",
@@ -183,7 +194,15 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting the folder:  oodles_smart_data\n"
+     ]
+    }
+   ],
    "source": [
     "framework_lr = Framework(cfg)\n",
     "\n",
@@ -211,7 +230,7 @@
       "Kicking off re-training\n",
       "251 data-points selected out of 371\n",
       "Training on:  oodles_smart_data/1/training_dataset.json  which has  2255  data-points\n",
-      "Model saved at:  trained_models_lr/version_1\n",
+      "Trained model exists. Skipping training again.\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
@@ -233,9 +252,15 @@
     "pred_classes = []\n",
     "model = joblib.load(\"trained_models_lr/\" + 'version_0')\n",
     "for i,elem in enumerate(X_test):\n",
-    "    preds = model_predict({\"model\": model, \"kps\": elem.reshape(1, -1), \"id\": [id[i]]})\n",
+    "\n",
+    "    # Do model prediction\n",
+    "    preds, idens = model_predict({\"model\": model, \"kps\": elem.reshape(1, -1), \"id\": [id[i]]})\n",
+    "\n",
+    "    # Attach Ground Truth\n",
+    "    framework_lr.attach_ground_truth({'id': idens, 'gt': [y_test[i]]})\n",
+    "\n",
+    "    # Retrain only once\n",
     "    if framework_lr.version > 1:\n",
-    "        # Retrain only once\n",
     "        break"
    ]
   },
@@ -262,43 +287,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on:  data/training_data.json  which has  1000  data-points\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-11-17 17:20:58.363717: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "3/3 [==============================] - 1s 174ms/step - loss: 143.7527 - binary_accuracy: 0.2604\n",
-      "Epoch 2/10\n",
-      "3/3 [==============================] - 1s 181ms/step - loss: 129.5267 - binary_accuracy: 0.2826\n",
-      "Epoch 3/10\n",
-      "3/3 [==============================] - 1s 189ms/step - loss: 122.6065 - binary_accuracy: 0.2812\n",
-      "Epoch 4/10\n",
-      "3/3 [==============================] - 1s 167ms/step - loss: 116.1137 - binary_accuracy: 0.2943\n",
-      "Epoch 5/10\n",
-      "3/3 [==============================] - 1s 162ms/step - loss: 97.9835 - binary_accuracy: 0.3385\n",
-      "Epoch 6/10\n",
-      "3/3 [==============================] - 0s 167ms/step - loss: 92.0371 - binary_accuracy: 0.3008\n",
-      "Epoch 7/10\n",
-      "3/3 [==============================] - 1s 161ms/step - loss: 87.5087 - binary_accuracy: 0.3372\n",
-      "Epoch 8/10\n",
-      "3/3 [==============================] - 1s 166ms/step - loss: 80.9741 - binary_accuracy: 0.3333\n",
-      "Epoch 9/10\n",
-      "3/3 [==============================] - 1s 166ms/step - loss: 72.0179 - binary_accuracy: 0.3802\n",
-      "Epoch 10/10\n",
-      "3/3 [==============================] - 1s 170ms/step - loss: 66.8972 - binary_accuracy: 0.3828\n",
-      "INFO:tensorflow:Assets written to: trained_models_dnn/version_0/assets\n",
-      "Model saved at:  trained_models_dnn/version_0\n"
+      "Training on:  data/training_data.json  which has  1000  data-points\n",
+      "Trained model exists. Skipping training again.\n"
      ]
     }
    ],
@@ -320,17 +310,25 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-28 14:57:06.394362: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 383us/step\n"
+      "492/492 [==============================] - 0s 436us/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.2280846735744708"
+       "0.22344415485347402"
       ]
      },
      "execution_count": 10,
@@ -396,48 +394,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50  edge-cases collected out of  186  inferred samples\n",
-      "100  edge-cases collected out of  372  inferred samples\n",
-      "150  edge-cases collected out of  575  inferred samples\n",
-      "200  edge-cases collected out of  799  inferred samples\n",
-      "250  edge-cases collected out of  958  inferred samples\n",
+      "50  edge-cases collected out of  188  inferred samples\n",
+      "100  edge-cases collected out of  384  inferred samples\n",
+      "150  edge-cases collected out of  590  inferred samples\n",
+      "200  edge-cases collected out of  804  inferred samples\n",
+      "250  edge-cases collected out of  968  inferred samples\n",
       "Kicking off re-training\n",
-      "251 data-points selected out of 960\n",
+      "251 data-points selected out of 972\n",
       "Training on:  oodles_smart_data/1/training_dataset.json  which has  2255  data-points\n",
-      "Epoch 1/10\n",
-      "8/8 [==============================] - 1s 162ms/step - loss: 75.3781 - binary_accuracy: 0.5205\n",
-      "Epoch 2/10\n",
-      "8/8 [==============================] - 1s 164ms/step - loss: 64.3419 - binary_accuracy: 0.5068\n",
-      "Epoch 3/10\n",
-      "8/8 [==============================] - 1s 165ms/step - loss: 58.2991 - binary_accuracy: 0.4897\n",
-      "Epoch 4/10\n",
-      "8/8 [==============================] - 1s 172ms/step - loss: 49.5159 - binary_accuracy: 0.4985\n",
-      "Epoch 5/10\n",
-      "8/8 [==============================] - 1s 169ms/step - loss: 40.2772 - binary_accuracy: 0.5161\n",
-      "Epoch 6/10\n",
-      "8/8 [==============================] - 1s 162ms/step - loss: 32.4235 - binary_accuracy: 0.5552\n",
-      "Epoch 7/10\n",
-      "8/8 [==============================] - 1s 160ms/step - loss: 26.0855 - binary_accuracy: 0.5957\n",
-      "Epoch 8/10\n",
-      "8/8 [==============================] - 1s 158ms/step - loss: 21.0049 - binary_accuracy: 0.6201\n",
-      "Epoch 9/10\n",
-      "8/8 [==============================] - 1s 161ms/step - loss: 17.8122 - binary_accuracy: 0.6592\n",
-      "Epoch 10/10\n",
-      "8/8 [==============================] - 1s 161ms/step - loss: 14.1287 - binary_accuracy: 0.6997\n",
-      "INFO:tensorflow:Assets written to: trained_models_dnn/version_1/assets\n",
-      "Model saved at:  trained_models_dnn/version_1\n",
+      "Trained model exists. Skipping training again.\n",
       "Model retraining done...\n",
       "Generating comparison report...\n",
       "Training on:  data/training_data.json  which has  1000  data-points\n",
       "Trained model exists. Skipping training again.\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 401us/step\n",
+      "492/492 [==============================] - 0s 487us/step\n",
       "Evaluating on  15731  data-points\n",
-      "492/492 [==============================] - 0s 359us/step\n",
+      "492/492 [==============================] - 0s 502us/step\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n",
-      "Old model accuracy:  0.2280846735744708\n",
-      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.6803763269976479\n",
+      "Old model accuracy:  0.22344415485347402\n",
+      "Retrained model accuracy (ie 251 smartly collected data-points added):  0.699574089377662\n",
       "---------------------------------------------\n",
       "---------------------------------------------\n"
      ]
@@ -447,13 +424,23 @@
     "model_dir = 'trained_models_dnn/'\n",
     "model_save_name = 'version_0'\n",
     "real_world_dataset = KpsDataset(\n",
-    "    real_world_test_cases, batch_size=1, shuffle=False, augmentations=False, is_test=True\n",
+    "    real_world_test_cases, batch_size=inference_batch_size, shuffle=False, augmentations=False, is_test=True\n",
     ")\n",
     "model = tf.keras.models.load_model(model_dir + model_save_name)\n",
+    "gt_data = read_json(annotation_args['master_file'])\n",
+    "all_gt_ids = [x['id'] for x in gt_data]\n",
+    "\n",
     "for i,elem in enumerate(real_world_dataset):\n",
-    "    preds = model_predict({\"model\": model, \"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]})\n",
+    "\n",
+    "    # Do model prediction\n",
+    "    preds, idens = model_predict({\"model\": model, \"kps\": elem[0][\"kps\"], \"id\": elem[0][\"id\"]})\n",
+    "\n",
+    "    # Attach ground truth\n",
+    "    this_elem_gt = [gt_data[all_gt_ids.index(x)]['gt'] for x in elem[0]['id']]\n",
+    "    framework_dnn.attach_ground_truth({'id': idens, 'gt': np.array(this_elem_gt)})\n",
+    "\n",
+    "    # Retrain only once\n",
     "    if framework_dnn.version > 1:\n",
-    "        # Retrain only once\n",
     "        break"
    ]
   }
