Generic way to define custom anomaly

--- a/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
+++ b/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
@@ -121,40 +121,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CustomConceptDrift(CustomAnomaly):\n",
-    "    \"\"\"\n",
-    "    Defining a custom drift metric where\n",
-    "    the user just want to check if accuracy \n",
-    "    drops beyond a threshold.\n",
-    "    \"\"\"\n",
-    "    def initialise_anomaly(self):\n",
-    "        self.initial_acc = None       \n",
-    "        self.acc_arr = []\n",
-    "        self.count = 0       \n",
-    "        self.thres = 0.02\n",
-    "        self.window_size = 200\n",
-    "        self.is_drift_detected = False\n",
-    "        \n",
-    "    def check(self, inputs, outputs, gts=None, extra_args={}):\n",
-    "        self.count += 1\n",
-    "        self.acc_arr.append(outputs[0]==gts[0])\n",
-    "        if self.count == self.window_size:\n",
-    "            self.initial_acc = sum(self.acc_arr)/self.window_size\n",
-    "        if (self.initial_acc is not None):\n",
-    "            recent_acc = sum(self.acc_arr[-self.window_size:])/self.window_size\n",
-    "            self.plot_scalars('custom_metrics', {\n",
-    "                'initial_acc': self.initial_acc,\n",
-    "                'recent_acc': recent_acc,\n",
-    "            }, self.count)\n",
-    "            if (self.initial_acc - recent_acc > self.thres) and (not self.is_drift_detected):\n",
-    "                    print(\"Concept drift detected with custom metric at time: \", self.count)\n",
-    "                    self.is_drift_detected = True\n",
-    "        \n",
-    "    def is_data_interesting(self, inputs, outputs, gts=None, extra_args={}):\n",
-    "        return False\n",
+    "\"\"\"\n",
+    "Defining a custom drift metric where\n",
+    "the user just want to check if accuracy \n",
+    "drops beyond a threshold.\n",
+    "\"\"\"\n",
     "\n",
-    "    def need_ground_truth(self):\n",
-    "        return True"
+    "def custom_initialize_func(self):\n",
+    "    self.initial_acc = None       \n",
+    "    self.acc_arr = []\n",
+    "    self.count = 0       \n",
+    "    self.thres = 0.02\n",
+    "    self.window_size = 200\n",
+    "    self.is_drift_detected = False\n",
+    "\n",
+    "def custom_check_func(self, inputs, outputs, gts=None, extra_args={}):\n",
+    "    self.count += 1\n",
+    "    self.acc_arr.append(outputs[0]==gts[0])\n",
+    "    if self.count == self.window_size:\n",
+    "        self.initial_acc = sum(self.acc_arr)/self.window_size\n",
+    "    if (self.initial_acc is not None):\n",
+    "        recent_acc = sum(self.acc_arr[-self.window_size:])/self.window_size\n",
+    "        self.plot_scalars('custom_metrics', {\n",
+    "            'initial_acc': self.initial_acc,\n",
+    "            'recent_acc': recent_acc,\n",
+    "        }, self.count)\n",
+    "        if (self.initial_acc - recent_acc > self.thres) and (not self.is_drift_detected):\n",
+    "                print(\"Concept drift detected with custom metric at time: \", self.count)\n",
+    "                self.is_drift_detected = True"
    ]
   },
   {
@@ -192,7 +186,8 @@
     "        },\n",
     "        {\n",
     "        'type': Anomaly.CUSTOM_MONITOR,\n",
-    "        'algorithm': CustomConceptDrift,\n",
+    "        'initialize_func': custom_initialize_func,\n",
+    "        'check_func': custom_check_func,\n",
     "        'need_gt': True,\n",
     "        },\n",
     "    ], \n",
