Bug fixes and Ran black

--- a/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
+++ b/examples/data_drifts/cyber_attack_classification/drift_detection.ipynb
@@ -228,21 +228,13 @@
     }
    ],
    "source": [
-    "y_preds = np.zeros(y_test.shape)\n",
-    "time_pred = []\n",
-    "time_gt = []\n",
     "for i in range(int(len(X_test)/inference_batch_size)):\n",
     "    inputs = {'model': classifier, \n",
     "              'X_test': X_test[i*inference_batch_size:(i+1)*inference_batch_size]}\n",
     "    \n",
-    "    y_pred, idens = model_predict(inputs)\n",
-    "    y_preds[i*inference_batch_size:(i+1)*inference_batch_size] = y_pred\n",
+    "    _, idens = model_predict(inputs)\n",
     "    framework.attach_ground_truth({'identifier': idens, \n",
-    "                                   'gt': y_test[i*inference_batch_size:(i+1)*inference_batch_size]})\n",
-    "\n",
-    "    # Retrain only once\n",
-    "    if framework.version > 1:\n",
-    "        break"
+    "                                   'gt': y_test[i*inference_batch_size:(i+1)*inference_batch_size]})"
    ]
   },
   {
