Remove unwanted import

--- a/examples/recommendation_biases/shopping_cart_rec/recommendation_bias.ipynb
+++ b/examples/recommendation_biases/shopping_cart_rec/recommendation_bias.ipynb
@@ -14,7 +14,7 @@
     "from reclist.recommenders.prod2vec import CoveoP2VRecModel\n",
     "from reclist.reclist import CoveoCartRecList\n",
     "\n",
-    "from oodles import Framework, monitor, Anomaly, BiasAlgo, CustomAnomaly\n",
+    "from oodles import Framework, monitor, Anomaly, BiasAlgo\n",
     "import collections"
    ]
   },
